scripts/nullaway/wpi/url74b2be4e76_gurbano_petulant_octo_sudoku_tgz-pJ8-test_testJ8.txt
../wpi/url74b2be4e76_gurbano_petulant_octo_sudoku_tgz-pJ8-test_testJ8/src/ocr/Entry.java:192: error: [NullAway] dereferenced expression entryImage is @Nullable
        int w = entryImage.getWidth(this);
                          ^
    (see http://t.uber.com/nullaway )
../wpi/url74b2be4e76_gurbano_petulant_octo_sudoku_tgz-pJ8-test_testJ8/src/ocr/Entry.java:209: error: [NullAway] dereferenced expression entryImage is @Nullable
        int w = entryImage.getWidth(this);
                          ^
    (see http://t.uber.com/nullaway )
../wpi/url74b2be4e76_gurbano_petulant_octo_sudoku_tgz-pJ8-test_testJ8/src/ocr/Entry.java:270: error: [NullAway] dereferenced expression entryImage is @Nullable
        int w = entryImage.getWidth(this);
                          ^
    (see http://t.uber.com/nullaway )
../wpi/url74b2be4e76_gurbano_petulant_octo_sudoku_tgz-pJ8-test_testJ8/src/ocr/Entry.java:291: error: [NullAway] dereferenced expression entryImage is @Nullable
        int w = entryImage.getWidth(this);
                          ^
    (see http://t.uber.com/nullaway )
../wpi/url74b2be4e76_gurbano_petulant_octo_sudoku_tgz-pJ8-test_testJ8/src/ocr/KohonenNetwork.java:145: error: [NullAway] dereferenced expression w is @Nullable
        for (i = 0; i < inputNeuronCount; i++) w[i] *= len;
                                                ^
    (see http://t.uber.com/nullaway )
../wpi/url74b2be4e76_gurbano_petulant_octo_sudoku_tgz-pJ8-test_testJ8/src/ocr/KohonenNetwork.java:146: error: [NullAway] dereferenced expression w is @Nullable
        w[inputNeuronCount] = 0;
         ^
    (see http://t.uber.com/nullaway )
../wpi/url74b2be4e76_gurbano_petulant_octo_sudoku_tgz-pJ8-test_testJ8/src/ocr/KohonenNetwork.java:248: error: [NullAway] dereferenced expression work is @Nullable
                    work[i] = rate * dptr[i] * normfac[0] + wptr[i];
                        ^
    (see http://t.uber.com/nullaway )
../wpi/url74b2be4e76_gurbano_petulant_octo_sudoku_tgz-pJ8-test_testJ8/src/ocr/KohonenNetwork.java:255: error: [NullAway] dereferenced expression work is @Nullable
                work[inputNeuronCount] = rate * synth[0] + wptr[inputNeuronCount];
                    ^
    (see http://t.uber.com/nullaway )
../wpi/url74b2be4e76_gurbano_petulant_octo_sudoku_tgz-pJ8-test_testJ8/src/ocr/KohonenNetwork.java:260: error: [NullAway] dereferenced expression work is @Nullable
                for (int i = 0; i <= inputNeuronCount; i++) cptr[i] += work[i] - wptr[i];
                                                                           ^
    (see http://t.uber.com/nullaway )
../wpi/url74b2be4e76_gurbano_petulant_octo_sudoku_tgz-pJ8-test_testJ8/src/ocr/Network.java:121: error: [NullAway] dereferenced expression v is @Nullable
        for (int i = 0; i < v.length; i++) rtn += v[i] * v[i];
                             ^
    (see http://t.uber.com/nullaway )
../wpi/url74b2be4e76_gurbano_petulant_octo_sudoku_tgz-pJ8-test_testJ8/src/solver/Sudoku.java:259: error: [NullAway] dereferenced expression cell is @Nullable
        cell.setCandidates(new ArrayList<Integer>());
            ^
    (see http://t.uber.com/nullaway )
../wpi/url74b2be4e76_gurbano_petulant_octo_sudoku_tgz-pJ8-test_testJ8/src/solver/methods/BUG.java:52: error: [NullAway] dereferenced expression threeCell is @Nullable
        List<Integer> candidates = threeCell.getCandidates();
                                            ^
    (see http://t.uber.com/nullaway )
../wpi/url74b2be4e76_gurbano_petulant_octo_sudoku_tgz-pJ8-test_testJ8/src/solver/methods/naked/pair/NakedPairRow.java:21: error: [NullAway] dereferenced expression nakedPair is @Nullable
        nakedPair.get(0).setCandidates(new ArrayList<Integer>(Arrays.asList(couple.a, couple.b)));
                 ^
    (see http://t.uber.com/nullaway )
../wpi/url74b2be4e76_gurbano_petulant_octo_sudoku_tgz-pJ8-test_testJ8/src/solver/methods/naked/pair/NakedPairRow.java:21: error: [NullAway] dereferenced expression couple is @Nullable
        nakedPair.get(0).setCandidates(new ArrayList<Integer>(Arrays.asList(couple.a, couple.b)));
                                                                                  ^
    (see http://t.uber.com/nullaway )
../wpi/url74b2be4e76_gurbano_petulant_octo_sudoku_tgz-pJ8-test_testJ8/src/solver/methods/naked/pair/NakedPairRow.java:37: error: [NullAway] dereferenced expression nakedPair is @Nullable
        int row = nakedPair.get(0).getRow();
                           ^
    (see http://t.uber.com/nullaway )
../wpi/url74b2be4e76_gurbano_petulant_octo_sudoku_tgz-pJ8-test_testJ8/src/solver/methods/naked/pair/NakedPairCol.java:21: error: [NullAway] dereferenced expression nakedPair is @Nullable
        nakedPair.get(0).setCandidates(new ArrayList<Integer>(Arrays.asList(couple.a, couple.b)));
                 ^
    (see http://t.uber.com/nullaway )
../wpi/url74b2be4e76_gurbano_petulant_octo_sudoku_tgz-pJ8-test_testJ8/src/solver/methods/naked/pair/NakedPairCol.java:21: error: [NullAway] dereferenced expression couple is @Nullable
        nakedPair.get(0).setCandidates(new ArrayList<Integer>(Arrays.asList(couple.a, couple.b)));
                                                                                  ^
    (see http://t.uber.com/nullaway )
../wpi/url74b2be4e76_gurbano_petulant_octo_sudoku_tgz-pJ8-test_testJ8/src/solver/methods/naked/pair/NakedPairCol.java:37: error: [NullAway] dereferenced expression nakedPair is @Nullable
        int col = nakedPair.get(0).getCol();
                           ^
    (see http://t.uber.com/nullaway )
../wpi/url74b2be4e76_gurbano_petulant_octo_sudoku_tgz-pJ8-test_testJ8/src/solver/methods/naked/pair/NakedPairBlock.java:75: error: [NullAway] dereferenced expression nakedPair is @Nullable
        nakedPair.get(0).setCandidates(new ArrayList<Integer>(Arrays.asList(couple.a, couple.b)));
                 ^
    (see http://t.uber.com/nullaway )
../wpi/url74b2be4e76_gurbano_petulant_octo_sudoku_tgz-pJ8-test_testJ8/src/solver/methods/naked/pair/NakedPairBlock.java:75: error: [NullAway] dereferenced expression couple is @Nullable
        nakedPair.get(0).setCandidates(new ArrayList<Integer>(Arrays.asList(couple.a, couple.b)));
                                                                                  ^
    (see http://t.uber.com/nullaway )
../wpi/url74b2be4e76_gurbano_petulant_octo_sudoku_tgz-pJ8-test_testJ8/src/solver/methods/naked/pair/NakedPairBlock.java:94: error: [NullAway] dereferenced expression nakedPair is @Nullable
        int block = nakedPair.get(0).getBlock();
                             ^
    (see http://t.uber.com/nullaway )
Note: ../wpi/url74b2be4e76_gurbano_petulant_octo_sudoku_tgz-pJ8-test_testJ8/src/ocr/MainEntry.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
21 errors
